Project1/force-app/main/default/objects/Route__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pawtucket</fullName>
            </value>
            <value>
                <fullName>Central Falls</fullName>
            </value>
            <value>
                <fullName>Providence</fullName>
            </value>
            <value>
                <fullName>East providence</fullName>
            </value>
            <value>
                <fullName>North Providence</fullName>
            </value>
            <value>
                <fullName>Warwick</fullName>
            </value>
            <value>
                <fullName>West Warwick</fullName>
            </value>
            <value>
                <fullName>North Kingston</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>