Project1/force-app/main/default/objects/Route__c/fields/Street__c.field-meta.xml
<CustomField>
    <fullName>Street__c</fullName>
    <label>Street</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>City__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Street 1</fullName>
            </value>
            <value>
                <fullName>Street 2</fullName>
            </value>
            <value>
                <fullName>Street 3</fullName>
            </value>
            <value>
                <fullName>Street 4</fullName>
            </value>
            <value>
                <fullName>Street 5</fullName>
            </value>
            <value>
                <fullName>Street 6</fullName>
            </value>
            <value>
                <fullName>Street 7</fullName>
            </value>
            <value>
                <fullName>Street 8</fullName>
            </value>
            <value>
                <fullName>Street 9</fullName>
            </value>
            <value>
                <fullName>Street 10</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>