Project1/force-app/main/default/objects/Route__c/recordTypes/Custom_Route.recordType-meta.xml
<RecordType>
    <fullName>Custom_Route</fullName>
    <active>true</active>
    <label>Custom Route</label>
</RecordType>